[project]
requires-python = "==3.13.*"
name = "misfortune"
version = "1.0.0"
description = ""
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.1",
    "bs-nats-updater ==2.0.4",
    "fastapi ==0.116.*",
    "google-cloud-firestore >=2, <3",
    "httpx",
    "more-itertools >=10, <11",
    "pydantic >=2, <3",
    "python-telegram-bot ==22.2",
    "sentry-sdk >=2, <3",
    "uvicorn[standard] ==0.35.*",
    "websockets ==15.0.1",
    "pyjwt >=2, <3",
    "uvloop ==0.21.*",
]

[dependency-groups]
dev = [
    "mypy ==1.16.*",
    "pytest >=8, <9",
    "pytest-mock >=3, <4",
    "ruff ==0.12.3",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    # "error",
]
log_cli=true
log_cli_level = "info"
xfail_strict = true

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncache"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FAST",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
