[project]
requires-python = "==3.14.*"
name = "misfortune"
version = "1.0.0"
description = ""
authors = [{ name = "Björn Petersen", email = "git@bjoernpetersen.net" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==3.4.0",
    "bs-nats-updater ==3.0.0",
    "fastapi ==0.128.0",
    "httpx",
    "more-itertools >=10, <11",
    "pydantic >=2, <3",
    "pyjwt >=2, <3",
    "python-telegram-bot ==22.5",
    "redis[hiredis]==7.1.0",
    "sentry-sdk >=2, <3",
    "uvicorn[standard] ==0.40.*",
    "websockets ==16.0",
    "uvloop ==0.22.*",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest ==9.0.*",
    "pytest-mock >=3, <4",
    "ruff ==0.14.13",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
bs-state = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "error",
]
log_cli = true
log_cli_level = "info"

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "asyncache"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FAST",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "misfortune.shared_model.MisfortuneModel",
]

